--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <div id="title" class="text-center"></div>
+          <div id="title" class="text-center">Flash Cards!</div>
         </div>
       </div>
       <!-- ****************************************** -->
